Fixed slight shifting of sticky nav on hover expand

--- a/styles/sass/_header.scss
+++ b/styles/sass/_header.scss
@@ -34,7 +34,7 @@ header {
 
     nav {
         position: fixed;
-        right: 2%;
+        right: 36px;
         top: 50%;
         transform: translateY(-50%);
 
