--- a/styles/style.css
+++ b/styles/style.css
@@ -342,7 +342,7 @@ header h1 {
 }
 header nav {
   position: fixed;
-  right: 2%;
+  right: 36px;
   top: 50%;
   -webkit-transform: translateY(-50%);
           transform: translateY(-50%);
